Fix: Bootstrap 4 styling integration. Fixed position buttons didn't have right z-index

--- a/css/buttons.bootstrap4.scss
+++ b/css/buttons.bootstrap4.scss
@@ -4,6 +4,7 @@
 
 div.dt-button-collection {
 	position: absolute;
+	z-index: 2001;
 
 	div.dropdown-menu {
 		display: block;
@@ -13,6 +14,7 @@ div.dt-button-collection {
 
 	div.dt-button-collection-title {
 		background-color: white;
+		border: 1px solid rgba(0, 0, 0, 0.15);
 	}
 
 	@include dtb-fixed-collection();
