--- a/css/mixins.scss
+++ b/css/mixins.scss
@@ -30,7 +30,7 @@
 		border-radius: 0;
 
 		&.two-column {
-			margin-left: -150px;
+			margin-left: -200px;
 		}
 
 		&.three-column {
@@ -58,7 +58,7 @@
 	}
 
 	&.two-column {
-		width: 300px;
+		width: 400px;
 
 		> :last-child {
 			padding-bottom: 1px;
